--- a/front/static/css/screen.css
+++ b/front/static/css/screen.css
@@ -8,7 +8,7 @@ body {
 	font-family: arial, helvetica, sans-serif;
 	font-size: 62.5%;
 	background: #f8f8f8;
-	padding: 10px;
+	padding: 20px;
 }
 
 h1 {
@@ -45,8 +45,7 @@ a:focus {
 }
 
 .template-list {
-	list-style-position: inside;
-	list-style-type: decimal-leading-zero;
+	list-style: none;
 	margin-left: 0;
 	width: 400px;
 	border: 1px solid #dfdfdf;
