Moved app assets to subfolder

--- a/front/templates/prototype/base.html
+++ b/front/templates/prototype/base.html
@@ -3,7 +3,7 @@
 <head>
 <title>{% block title %}{% endblock %}Prototyper</title>
 
-<link href="{{ STATIC_URL }}css/screen.css" rel="stylesheet"/>
+<link href="{{ STATIC_URL }}prototype/css/screen.css" rel="stylesheet"/>
 </head>
 
 <body>
