--- a/front/templates/prototype/toolbar.html
+++ b/front/templates/prototype/toolbar.html
@@ -1,6 +1,6 @@
 <!--[if gt IE 6]><!-->
 <style>
-@import "{{ STATIC_URL }}css/toolbar.css";
+@import "{{ STATIC_URL }}prototype/css/toolbar.css";
 </style>
 <div id="django-prototype-toolbar">
 <ul>
