--- a/prototype/static/prototype/css/toolbar.css
+++ b/prototype/static/prototype/css/toolbar.css
@@ -1,13 +1,16 @@
 #django-prototype-toolbar {
-	margin: 0;
 	padding: 30px 0 0 0;
-	box-shadow: 0 0 5px #000000;
+	margin: 0;
+	box-shadow: 0 0 5px rgba(0,0,0,0.6);
+	border: 1px solid #cccccc;
+	border-top: none;
 	position: fixed;
 	top: 0;
 	right: 10px;
 	background: #ffffff;
+	background: rgba(255,255,255,0.9);
 	overflow: hidden;
-	max-height: 70%;
+	max-height: 90%;
 	height: 0;
 	width: 30px;
 }
@@ -28,7 +31,7 @@
 	display: block;
 }
 #django-prototype-toolbar li {
-	font-family: sans-serif;
+	font-family: Lucida Console, sans-serif;
 	font-size: 14px;
 	line-height: 1;
 	color: #333333;
@@ -40,7 +43,16 @@
 	padding: 5px 10px;
 	color: #333333;
 	text-decoration: none;
+	text-shadow: 0 1px 0 #ffffff;
+}
+#django-prototype-toolbar li:first-child a {
+	border: none;
 }
 #django-prototype-toolbar a:hover {
-	background: #cccccc;
+	background: #555555;
+	color: #ffffff;
+	text-shadow: none;
+}
+#django-prototype-toolbar a:active {
+	padding: 6px 9px 4px 11px;
 }
