--- a/prototype/templates/prototype/toolbar.html
+++ b/prototype/templates/prototype/toolbar.html
@@ -4,6 +4,7 @@
 </style>
 <div id="django-prototype-toolbar">
 <ul>
+	<li><a href="{% url template_list %}">Template list</a></li>
 	{% for template in request.project.template_listing %}
 	<li><a href="{% url template page=template %}">{{ template }}</a></li>
 	{% endfor %}
