Now caching template list for each project

--- a/prototype/templates/prototype/toolbar.html
+++ b/prototype/templates/prototype/toolbar.html
@@ -5,7 +5,7 @@
 <div id="django-prototype-toolbar">
 <ul>
 	<li><a href="{% url template_list %}">Template list</a></li>
-	{% for template in request.project.template_listing %}
+	{% for template in request.project.templates %}
 	<li><a href="{% url template page=template %}">{{ template }}</a></li>
 	{% endfor %}
 </ul>
