--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -1,9 +1,9 @@
 {% extends "prototype/base.html" %}
 
 {% block main %}
-<h1>{{ request.project }}</h1>
+<h1>{{ request.project }} {{ request.project.tmpl_last_modified }}</h1>
 <ul class="template-list">
-	{% for template in request.project.template_listing %}
+	{% for template in request.project.templates %}
 	<li><a href="{% url template page=template %}">{{ template }}</a></li>
 	{% endfor %}
 </ul>
