--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -1,10 +1,11 @@
 {% extends "prototype/base.html" %}
 
 {% block main %}
+
 <h1>{{ request.project }} {{ request.project.tmpl_last_modified }}</h1>
 <ul class="template-list">
 	{% for template in request.project.templates %}
-	<li><a href="{% url template page=template %}">{{ template }}</a></li>
+	<li><a href="{% url template page=template.file_name %}">{{ template.title }}</a></li>
 	{% endfor %}
 </ul>
 {% endblock %}
