--- a/prototype/templates/404.html
+++ b/prototype/templates/404.html
@@ -1,8 +1,16 @@
 {% extends "prototype/base.html" %}
 
-{% block main %}
+{% block title %}Page not found - {% endblock %}
 
+{% block main %}
 <h1>{{ request.project }}</h1>
+
+<div class="message error">
+	<h2>Template not found</h2>
+	
+	<p>The template <code>{{ request.page }}</code> does not exist</p>
+</div>
+
 {% with request.project.templates as templates %}
 <p>Time since last change: <strong>{{ request.project.tmpl_last_modified|timesince }}</strong></p>
 <ul class="template-list">
