--- a/prototype/templates/prototype/toolbar.html
+++ b/prototype/templates/prototype/toolbar.html
@@ -4,10 +4,10 @@
 </style>
 <div id="django-prototype-toolbar">
 <ul>
-	<li><a href="{% url template_list %}">Template list</a></li>
-	{% for template in request.project.templates %}
-	<li><a href="{% url template page=template.file_name %}">{{ template.title }}</a></li>
-	{% endfor %}
+{% with request.project.templates as templates %}
+<li><a href="{% url template_list %}">Template list</a></li>
+{% include "prototype/_template_list.html" %}
+{% endwith %}
 </ul>
 </div>
 <![endif]-->
