--- a/prototype/static/prototype/css/screen.css
+++ b/prototype/static/prototype/css/screen.css
@@ -7,7 +7,7 @@ html {
 body {
 	font-family: Lucida Console, sans-serif;
 	font-size: 62.5%;
-	background: #f8f8f8;
+	background: #ffffff;
 	padding: 20px;
 }
 
@@ -15,12 +15,29 @@ h1 {
 	font-size: 3em;
 	font-weight: normal;
 	margin-bottom: 0.5em;
+	text-shadow: 0 2px 0 #ffffff;
+}
+
+h2 {
+	font-size: 2em;
+	font-weight: normal;
+	margin-bottom: 0.5em;
+	text-shadow: 0 1px 0 #ffffff;
 }
 
 p {
-	font-size: 1.2em;
+	font-size: 1.4em;
 	line-height: 1.5;
 	margin-bottom: 1.5em;
+}
+
+p code {
+	font-size: 1em;
+	background: #EEFFB1;
+	border-radius: 3px;
+	padding: 4px 6px;
+	font-weight: bold;
+	box-shadow: 0 0 2px rgba(0,0,0,0.4);
 }
 
 ul {
@@ -34,7 +51,7 @@ li {
 }
 
 a {
-	color: #669900;
+	color: #0872CA;
 	text-decoration: none;
 }
 
@@ -50,6 +67,7 @@ a:focus {
 	width: 400px;
 	border: 1px solid #dfdfdf;
 	border-bottom: none;
+	border-radius: 3px;
 }
 
 .template-list li {
@@ -62,10 +80,41 @@ a:focus {
 	zoom: 1;
 	padding: 5px;
 	text-decoration: none;
-	background: #ffffff;
+	background: #f8f8f8;
+	text-shadow: 0 1px 0 #ffffff;
+}
+
+.template-list li:first-child a {
+	border-radius: 3px 3px 0 0;
+}
+
+.template-list li:last-child a {
+	border-radius: 0 0 3px 3px;
 }
 
 .template-list a:hover,
 .template-list a:focus {
-	background: #efefef;
+	background: #555555;
+	color: #ffffff;
+	text-shadow: none;
+}
+
+.template-list a:active {
+	padding: 6px 4px 4px 6px;
+}
+
+div.message {
+	border-radius: 4px;
+	box-shadow: 0 0 5px rgba(0,0,0,0.6);
+	padding: 10px;
+	margin: 0 0 2.1em -10px;
+	max-width: 600px;
+}
+
+div.error {
+	background: #FFDEDE;
+}
+
+div.message p {
+	margin: 0;
 }
