--- a/prototype/templates/prototype/_template_list.html
+++ b/prototype/templates/prototype/_template_list.html
@@ -1,3 +1,3 @@
 {% for template in templates %}
-<li><a href="{% url template page=template.file_name %}">{{ template.title }}</a></li>
+<li{% ifequal template.file_name current_template %} class="current"{% endifequal %}><a href="{% url template page=template.file_name %}">{{ template.title }}</a></li>
 {% endfor %}
