Added data_root to Project model and refactored directory listing routine

--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -9,4 +9,7 @@
 {% include "prototype/_template_list.html" %}
 </ul>
 {% endwith %}
+<div class="data-inspector">
+{% inspector %}
+</div>
 {% endblock %}
