--- a/prototype/static/prototype/css/screen.css
+++ b/prototype/static/prototype/css/screen.css
@@ -25,6 +25,13 @@ h2 {
 	text-shadow: 0 1px 0 #ffffff;
 }
 
+h3 {
+	font-size: 1.4em;
+	font-weight: bold;
+	margin-bottom: 0.5em;
+	text-shadow: 0 1px 0 #ffffff;
+}
+
 p {
 	font-size: 1.4em;
 	line-height: 1.5;
@@ -65,6 +72,7 @@ a:focus {
 	list-style: none;
 	margin-left: 0;
 	width: 400px;
+	float: left;
 	border: 1px solid #dfdfdf;
 	border-bottom: none;
 	border-radius: 3px;
@@ -117,4 +125,35 @@ div.error {
 
 div.message p {
 	margin: 0;
+}
+
+
+div.data-inspector {
+	float: left;
+	margin-left: 20px;
+}
+
+.data-inspector>ul {
+	border: 1px solid #dfdfdf;
+	border-radius: 3px;
+	background: #f0f0f0;
+	list-style-type: none;
+	margin: 0;
+}
+
+.data-inspector li {
+	font-size: 1em;
+	padding: 5px;
+}
+
+.data-inspector li li {
+	font-size: 1.2em;
+}
+
+.data-inspector li li li {
+	font-size: 1em;
+}
+
+.data-inspector ul.list {
+	
 }
