--- a/prototype/static/prototype/css/screen.css
+++ b/prototype/static/prototype/css/screen.css
@@ -2,34 +2,43 @@
 
 html {
 	overflow-y: scroll;
+	height: 100%;
 }
 
 body {
 	font-family: Lucida Console, sans-serif;
 	font-size: 62.5%;
+	background: #f0f0f0;
+	height: 100%;
+	color: #333333;
+}
+
+.wrapper {
+	width: 820px;
+	padding: 0 20px;
+	overflow: hidden;
+	margin: 0 auto;
 	background: #ffffff;
-	padding: 20px;
+	box-shadow: 0 0 5px rgba(0,0,0,0.5);
+	min-height: 100%;
 }
 
 h1 {
 	font-size: 3em;
 	font-weight: normal;
-	margin-bottom: 0.5em;
-	text-shadow: 0 2px 0 #ffffff;
+	margin: 20px 0 .5em 0;
 }
 
 h2 {
 	font-size: 2em;
 	font-weight: normal;
 	margin-bottom: 0.5em;
-	text-shadow: 0 1px 0 #ffffff;
 }
 
 h3 {
 	font-size: 1.4em;
 	font-weight: bold;
 	margin-bottom: 0.5em;
-	text-shadow: 0 1px 0 #ffffff;
 }
 
 p {
@@ -68,48 +77,73 @@ a:focus {
 	text-decoration: underline;
 }
 
+
+/* Template list */
+
 .template-list {
+	float: left;
+	width: 400px;
+	margin-bottom: 20px;
+}
+
+.template-list ul {
 	list-style: none;
 	margin-left: 0;
-	width: 400px;
-	float: left;
 	border: 1px solid #dfdfdf;
-	border-bottom: none;
 	border-radius: 3px;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 }
 
 .template-list li {
-	line-height: 1;
-	border-bottom: 1px solid #dfdfdf;
+	font-size: 1.2em;
+	line-height: 1.333;
 }
 
 .template-list a {
 	display: block;
 	zoom: 1;
-	padding: 5px;
 	text-decoration: none;
-	background: #f8f8f8;
 	text-shadow: 0 1px 0 #ffffff;
+	padding: 5px 8px 4px 8px;
+	margin: 0;
+	background-color: #efefef;
+	background-image: -webkit-gradient(
+	    linear,
+	    left top,
+	    left bottom,
+	    color-stop(0, #f9f9f9),
+	    color-stop(1, #efefef)
+	);
+	background-image: -moz-linear-gradient(
+	    center top,
+	    #f9f9f9 0%,
+	    #efefef 100%
+	);
+	border-bottom: 1px solid #dddddd;
+	border-top: 1px solid #ffffff;
 }
 
 .template-list li:first-child a {
-	border-radius: 3px 3px 0 0;
+	border-radius: 2px 2px 0 0;
 }
 
 .template-list li:last-child a {
-	border-radius: 0 0 3px 3px;
+	border-radius: 0 0 2px 2px;
+	border-bottom: none;
 }
 
 .template-list a:hover,
 .template-list a:focus {
-	background: #555555;
-	color: #ffffff;
-	text-shadow: none;
+	color: #0000ff;
+	background: #efefef;
 }
 
 .template-list a:active {
-	padding: 6px 4px 4px 6px;
+	padding: 6px 7px 3px 9px;
 }
+
+
+/* Message box */
 
 div.message {
 	border-radius: 4px;
@@ -128,32 +162,160 @@ div.message p {
 }
 
 
+/* Data inspector */
+
 div.data-inspector {
-	float: left;
-	margin-left: 20px;
+	float: right;
+	margin-bottom: 20px;
+	width: 400px;
 }
 
 .data-inspector>ul {
+	font-size: 1.2em;
+	line-height: 1.333;
 	border: 1px solid #dfdfdf;
 	border-radius: 3px;
-	background: #f0f0f0;
+	background: #f9f9f9;
 	list-style-type: none;
 	margin: 0;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.data-inspector h3 {
+	position: relative;
+	font-size: 1em;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	text-shadow: 0 1px 0 #ffffff;
+	padding: 5px 8px 4px 8px;
+	margin: 0;
+	background-color: #efefef;
+	background-image: -webkit-gradient(
+	    linear,
+	    left top,
+	    left bottom,
+	    color-stop(0, #f9f9f9),
+	    color-stop(1, #efefef)
+	);
+	background-image: -moz-linear-gradient(
+	    center top,
+	    #f9f9f9 0%,
+	    #efefef 100%
+	);
+	border-bottom: 1px solid #dddddd;
+	border-top: 1px solid #ffffff;
+}
+
+.js .data-inspector h3:hover {
+	background: #efefef;
+}
+
+.js .data-inspector h3 {
+	cursor: pointer;
+}
+
+.data-inspector li:first-child h3 {
+	border-radius: 2px 2px 0 0;
+}
+
+.data-inspector li:last-child h3 {
+	border-bottom: none;
+	border-radius: 0 0 2px 2px;
+}
+
+.data-inspector h3.error {
+	color: #EC0D00;
+	cursor: default;
+}
+
+.data-inspector h3 span {
+	font-weight: normal;
+	font-style: italic;
 }
 
 .data-inspector li {
 	font-size: 1em;
-	padding: 5px;
+	line-height: 1.333;
+	overflow: hidden;
 }
 
 .data-inspector li li {
-	font-size: 1.2em;
+	padding: 4px 8px 2px 18px;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ededed;
+	background: url(../images/bullet.png) no-repeat 8px 9px; 
+}
+
+.data-inspector li li:first-child {
+	border-top: none;
+}
+
+.data-inspector li li:last-child {
+	border-bottom: none;
 }
 
 .data-inspector li li li {
 	font-size: 1em;
 }
 
-.data-inspector ul.list {
-	
+.data-inspector ul ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	border-bottom: 1px solid #dddddd;
+}
+
+.data-inspector table ul {
+	border-bottom: none;
+}
+
+.js .data-inspector h3+ul,
+.js .data-inspector h3+div.dict {
+	display: none;
+}
+
+.data-inspector>li:last-child ul,
+.data-inspector>li:last-child table {
+	border-bottom: none;
+}
+
+.data-inspector table {
+	border-spacing: 0;
+	border-bottom: 1px solid #dddddd;
+}
+
+.data-inspector ul.list table {
+	border-radius: 3px;
+	border: 1px solid #dedede;
+	background: #ffffff;
+}
+
+.data-inspector th {
+	padding: 4px 8px 2px 8px;
+	font-style: italic;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ededed;
+	border-right: 1px solid #ededed;
+	vertical-align: top;
+}
+
+.data-inspector td {
+	width: 100%;
+	padding: 4px 8px 2px 8px;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ededed;
+	border-left: 1px solid #ffffff;
+}
+
+.data-inspector td ul {
+	margin: -4px -8px -2px -8px;
+}
+
+.data-inspector tr:first-child td,
+.data-inspector tr:first-child th {
+	border-top: none;
+}
+
+.data-inspector tr:last-child td,
+.data-inspector tr:last-child th {
+	border-bottom: none;
 }
