--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -14,6 +14,10 @@
 {% endwith %}
 <div class="data-inspector">
 	<h2>Data</h2>
+	{% if data %}
 	{% inspector %}
+	{% else %}
+	<p>No data structures</p>
+	{% endif %}
 </div>
 {% endblock %}
