--- a/prototype/templates/prototype/base.html
+++ b/prototype/templates/prototype/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{% block title %}{% endblock %}Prototyper</title>
+<title>{% block title %}{% endblock %}{{ request.project }}</title>
 
 <link href="{{ STATIC_URL }}prototype/css/screen.css" rel="stylesheet"/>
 
@@ -13,6 +13,8 @@ document.documentElement.className += " js";
 <body>
 
 <div class="wrapper">
+<h1>{{ request.project }}</h1>
+
 {% block main %}{% endblock %}
 </div>
 
