--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -1,21 +1,32 @@
 {% extends "prototype/base.html" %}
 
 {% block main %}
-{% with request.project.templates as templates %}
-<p>Time since last change: <strong>{{ request.project.tmpl_last_modified|timesince }}</strong></p>
+<div id="project-settings"{% if form.errors %} class="open"{% endif %}>
+	<form action="{% url template_list %}" method="post" id="project-form">
+		{{ form.as_div }}
+		<div class="actions">
+			<input type="submit" value="Save changes">
+		</div>
+		{% csrf_token %}
+	</form>
+</div>
+
+<div id="project-meta">
+	<p>Time since last change: <strong>{{ project.tmpl_last_modified|timesince }}</strong></p>
+</div>
+
 <div class="template-list">
 	<h2>Templates <em>({{ templates|length }} template{{ templates|length|pluralize }})</em></h2>
 	<ul>
-	{% include "prototype/_template_list.html" %}
+		{% include "prototype/_template_list.html" %}
 	</ul>
 </div>
-{% endwith %}
 <div class="data-inspector">
 	<h2>Data <em>({{ data|length }} item{{ data|length|pluralize }})</em></h2>
 	{% if data %}
-	{% inspector %}
+		{% inspector %}
 	{% else %}
-	<p>No data structures</p>
+		<p>No data structures</p>
 	{% endif %}
 </div>
 {% endblock %}
