Improved static asset builder Archive now written to disk and submission via ajax

--- a/prototype/templates/prototype/index.html
+++ b/prototype/templates/prototype/index.html
@@ -11,7 +11,7 @@
 	</form>
 	
 	<div class="project-actions">
-		<form action="{% url build_static %}" method="post">
+		<form action="{% url build_static %}" method="post" class="async">
 			<input type="submit" value="Build assets">
 			{% csrf_token %}
 		</form>
