--- a/prototype/templates/prototype/templates_toolbar.html
+++ b/prototype/templates/prototype/templates_toolbar.html
@@ -5,7 +5,7 @@
 <div id="django-prototype-toolbar">
 <h3>Select a template</h3>
 <ul>
-{% with request.project.templates as templates %}
+{% with project.templates as templates %}
 <li class="divider"><a href="{% url template_list %}">Template list</a></li>
 {% include "prototype/_template_list.html" %}
 {% endwith %}
