Fixed css builder and updated static assets

--- a/prototype/templates/prototype/base.html
+++ b/prototype/templates/prototype/base.html
@@ -3,7 +3,7 @@
 <head>
 <title>{% block title %}{% endblock %}{{ project }}</title>
 
-<link href="{{ STATIC_URL }}prototype/css/screen.css" rel="stylesheet"/>
+<link href="{{ STATIC_URL }}prototype/css/screen.min.css" rel="stylesheet"/>
 
 <script>
 document.documentElement.className += " js";
