--- a/prototype/templates/prototype/_template_list.html
+++ b/prototype/templates/prototype/_template_list.html
@@ -1,3 +1,3 @@
-{% for template in templates %}
+{% for template in project.templates %}
 <li{% if current_template and template.file_name == current_template %} class="current"{% endif %}><a href="{% url template template=template.file_name %}">{{ template.title }}</a></li>
 {% endfor %}
