--- a/prototype/templates/prototype/base.html
+++ b/prototype/templates/prototype/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+
 <title>{% block title %}{% endblock %}{{ project }}</title>
 
-<link href="{{ STATIC_URL }}prototype/css/screen.min.css" rel="stylesheet"/>
+<link href="{{ STATIC_URL }}prototype/css/screen.min.css" rel="stylesheet">
 
 <script>
 document.documentElement.className += " js";
