--- a/prototype/templates/404.html
+++ b/prototype/templates/404.html
@@ -13,8 +13,15 @@ document.documentElement.className += " js";
 <body>
 
 <div class="wrapper">
+	<h1>{% if project %}{{ project }}{% else %}Django Prototype{% endif %}</h1>
 	<div class="message error">
-		<h2>Page not found</h2>
+		{% if not project %}
+		<h2>No project configured for this host name</h2>
+		<p>Use the menu in top right of screen to select or configure a project.</p>
+		{% else %}
+		<h2>Missing page</h2>
+		<p>This page doesn't exist</p>
+		{% endif %}
 	</div>
 </div>
 </body>
