--- a/public/static/prototype/css/toolbar.css
+++ b/public/static/prototype/css/toolbar.css
@@ -73,6 +73,10 @@
 	display: block;
 }
 #django-prototype-toolbar li {
+	text-align: left;
+	margin: 0;
+	padding: 0;
+	display: block;
 	font-family: Lucida Console, sans-serif;
 	font-size: 12px;
 	line-height: 1;
