--- a/prototype/templates/prototype/templates_toolbar.html
+++ b/prototype/templates/prototype/templates_toolbar.html
@@ -2,7 +2,7 @@
 <style>
 @import "{{ STATIC_URL }}prototype/css/toolbar.css";
 </style>
-<div id="django-prototype-toolbar">
+<div id="django-prototype-toolbar" class="{{ project.toolbar_position }}">
 <h3>Select a template</h3>
 <ul>
 <li class="divider"><a href="{% url template_list %}">Template list</a></li>
