Switched to no database and json config

--- a/prototype/templates/prototype/base.html
+++ b/prototype/templates/prototype/base.html
@@ -5,7 +5,7 @@
 
 <title>{% block title %}{% endblock %}{{ project }}</title>
 
-<link href="{{ STATIC_URL }}prototype/css/screen.min.css" rel="stylesheet">
+<link href="{{ STATIC_URL }}css/screen.css" rel="stylesheet">
 
 <script>
 document.documentElement.className += " js";
@@ -21,6 +21,6 @@ document.documentElement.className += " js";
 </div>
 
 {% jquery "1.6.2" %}
-<script src="{{ STATIC_URL }}prototype/js/scripts.js"></script>
+<script src="{{ STATIC_URL }}js/scripts.js"></script>
 </body>
 </html>
